edited first time

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <nav id="navbar">
 
         <ul>
-            <li> <a href="#">Home</a> </li>
-            <li> <a href="#">About Us</a> </li>
-            <li> <a href="#">Services</a>
+            <li> <a href="https://www.linkedin.com/company/the-home-depot">Home</a> </li>
+            <li> <a
+                    href="https://mailchimp.com/solutions/digital-marketing-templates/?ds_c=DEPT_AOC_Google_Search_ROW_EN_NB_UpRet_Broad_50off_T5&ds_kids=p78377605841&ds_a_lid=aud-1549074331369:kwd-296986011329&ds_cid=71700000115522798&ds_agid=58700008586041962&gad_source=1&gclid=CjwKCAiAg9urBhB_EiwAgw88mb4Ys0DhNFRIrXWpwYlpylQDPUikLtlz_M7RyZ7ZH6eGxERgrFNDiRoCjnEQAvD_BwE&gclsrc=aw.ds">About
+                    Us</a> </li>
+            <li> <a href="https://policies.google.com/terms/service-specific?hl=en-US">Services</a>
                 <ul>
                     <li> <a href="#">Legal Consulting</a> </li>
                     <li> <a href="#">Ai Artist</a> </li>
@@ -28,8 +30,8 @@
 
                 </ul>
             </li>
-            <li> <a href="#">Contact Us</a> </li>
-            <li> <a href="#">Sign Up</a> </li>
+            <li> <a href="https://www.searchenginejournal.com/examples-contact-us-pages/378518/">Contact Us</a> </li>
+            <li> <a href="https://support.google.com/mail/answer/56256?hl=en">Sign Up</a> </li>
 
         </ul>
     </nav>
