Your commit message

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </div>
     <!-- Section Ended Here --> 
-                            FOOTER IS MISSING 
+                            FOOTER IS MISSING ❤️
 
 
 
