--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./WhatsApp Image 2.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon logo for myself.jpg
+    " type="image/x-icon">
     <link rel="stylesheet" href="Project 2.0 .css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Signika+Negative&display=swap');
@@ -74,12 +75,8 @@
             </div>
         </div>
     </div>
-    <!-- Section Ended Here --> 
-                            FOOTER IS MISSING ❤️
-
-
-
-
+    <!-- Section Ended Here -->
+    FOOTER IS MISSING ❤️
 </body>
 
 </html>
